<resources>
    <string name="app_name">PupPulse</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="next">Next</string>
    <string name="app_menu">App Menu</string>
    <string name="noPulseInput">–</string>
    <string name="notifications">Notifications</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="puppulse">PupPulse</string>
    <string name="back">back</string>
    <string name="settings">Settings</string>
    <string name="create_account">Create Account</string>
    <string name="your_name">Your name</string>
    <string name="your_dog_s_name">Your dog\'s name</string>
    <string name="your_dog_s_age">Your dog\'s age</string>
    <string name="bpm">/bpm</string>
    <string name="your_dog_s_weight">Your dog\'s weight</string>
    <string name="breed">Your dog\'s breed</string>
    <string name="add_dog">Add dog</string>
    <string name="this_week">This week</string>
    <string name="dark_mode">Dark Mode</string>

</resources>